--- a/index.html
+++ b/index.html
@@ -8,3 +8,53 @@
         /* Додайте стилі за необхідності */
     </style>
 </head>
+<body>
+
+    <!-- Header -->
+    <header>
+        <div>
+            <a href="#" class="logo">DevStudio</a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#about">Про нас</a></li>
+                <li><a href="#portfolio">Портфоліо</a></li>
+                <li><a href="#contacts">Контакти</a></li>
+            </ul>
+        </nav>
+        <div>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380680001100">+38 068 000 11 00</a>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <body>
+        <!-- Hero Section -->
+        <section>
+            <h1>Ми створюємо легкі рішення складних завдань для вашого бізнесу</h1>
+            <button type="button">Замовити послугу</button>
+        </section>
+
+        <!-- Features Section -->
+        <section>
+            <ul>
+                <li>
+                    <h2>Увага до деталей</h2>
+                    <p>Lorem ipsum - це текст-"риба", що часто використовується у веб-дизайні.</p>
+                </li>
+                <li>
+                    <h2>Пунктуальність</h2>
+                    <p>Lorem ipsum - це стандартна "риба" для текстів на латині.</p>
+                </li>
+                <li>
+                    <h2>Планування</h2>
+                    <p>Lorem ipsum - це текст-"риба", що часто використовується у веб-дизайні.</p>
+                </li>
+                <li>
+                    <h2>Сучасні технології</h2>
+                    <p>Lorem ipsum - це стандартна "риба" для текстів на латині.</p>
+                </li>
+            </ul>
+        </section>
+    </body>
