HTML-розмiтку сторiнки завершено

--- a/index.html
+++ b/index.html
@@ -57,4 +57,52 @@
                 </li>
             </ul>
         </section>
+           <!-- Portfolio Section -->
+           <section>
+            <h2>Роботи на яких спеціалізуємося</h2>
+            <ul>
+                <li><img src="work1.jpg" alt="Код на екрані" width="300"></li>
+                <li><img src="work2.jpg" alt="Команда за роботою" width="300"></li>
+                <li><img src="work3.jpg" alt="Планування на ноутбуці" width="300"></li>
+            </ul>
+        </section>
+
+        <!-- Team Section -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="team1.jpg" alt="Betty Foriz - Product Designer" width="200">
+                    <h3>Betty Foriz</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="team2.jpg" alt="Folke Booke - Frontend Developer" width="200">
+                    <h3>Folke Booke</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="team3.jpg" alt="Mito Dito - Marketing" width="200">
+                    <h3>Mito Dito</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="team4.jpg" alt="Lóa Spetnaz - UI Designer" width="200">
+                    <h3>Lóa Spetnaz</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <address>
+            <a href="#" class="logo">DevStudio</a><br>
+            м. Харків, вул. Ярослава Мудрого, 18<br>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+            <a href="tel:+380680001100">+38 068 000 11 00</a>
+        </address>
+    </footer>
     </body>
+    </html>
