--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <body>
         <!-- Hero Section -->
         <section>
-            <h1>Ми створюємо легкі рішення складних завдань для вашого бізнесу</h1>
+            <h1>Ми створюємо легкі рішення складних завдань для вашого бізнеса</h1>
             <button type="button">Замовити послугу</button>
         </section>
 
